# intro-to-sway

./: README.md  package-lock.json
contract/: Cargo.toml  Forc.toml
contract/src/: docs_hub_misc.sw  main.sw
contract/tests/: harness.rs
frontend/: fuels.config.ts  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: AllItems.tsx  BuyItem.tsx  ConnectButton.tsx  ItemCard.tsx  ListItem.tsx  ShowItem.tsx
frontend/src/contracts/: ContractAbi.d.ts  ContractAbi.hex.ts  SwayStoreContractAbi.d.ts  common.d.ts  index.ts
frontend/src/contracts/contracts/: ContractAbi.d.ts  ContractAbi.hex.ts  index.ts
frontend/src/contracts/factories/: ContractAbi__factory.ts  SwayStoreContractAbi__factory.ts
frontend/src/hooks/: useIsConnected.tsx
frontend/src/sway-api/contracts/: SwayStore.ts  SwayStoreFactory.ts  common.d.ts
frontend/src/sway-store-api/contracts/: index.ts
src/: main.sw
sway-store/: .gitignore  Forc.toml  README.md  fuel-toolchain.toml  fuels.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo
sway-store/src/: App.tsx
sway-store/src/components/: AllItems.tsx  ItemCard.tsx  ListItem.tsx
sway-store/src/sway-api/contracts/: TestContract.ts  TestContractFactory.ts  common.d.ts  index.ts
sway-store/src/sway-api/predicates/: TestPredicate.ts  index.ts
sway-store/src/sway-api/scripts/: TestScript.ts  index.ts
sway-store/sway-programs/contract/: Cargo.toml
sway-store/sway-programs/contract/src/: main.sw
sway-store/sway-programs/contract/tests/: harness.rs
tests/: harness.rs
(+1 files in other folders)
