[package]
name = "sway-store"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["sarahschwartz <58856580+sarahschwartz@users.noreply.github.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.66.1", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }
fuel-core-client = { version = "0.36", default-features = false }


[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
