[package]
name = "sway-store"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["Call Delegation <106365423+calldelegation@users.noreply.github.com>"]
license = "Apache-2.0"

[dev-dependencies]
fuels = "0.66.6"
fuel-core-client = { version = "0.37", default-features = false }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "tests/harness.rs"
